traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:13: error: not found: value Direction
    if (getDirection() == Direction.EAST) {
                          ^TraversalByColumn:23: error: not found: value Direction
    if (getDirection() == Direction.WEST) {
                          ^